--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNe+G8tJetTUzOg+C1X3bpU",
+      "authorship_tag": "ABX9TyNGYvx71JqA7PXrW6W1jGlO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1253,7 +1253,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1429,7 +1429,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1472,7 +1472,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1510,7 +1510,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1519,6 +1519,52 @@
             "Enter the number: 24\n",
             "Enter the number: 36\n",
             "The H.C.F. is 12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "28. Create a program that reads an array of integers and\n",
+        "checks that all elements are even"
+      ],
+      "metadata": {
+        "id": "Db67nEmb69_S"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr = [21, 6, 8, 12, 56, 86]\n",
+        "is_even = False\n",
+        "\n",
+        "for num in arr:\n",
+        "    if num % 2 != 0:  # Checking if the number is not even\n",
+        "        is_even = False\n",
+        "        break\n",
+        "    else:\n",
+        "        is_even = True\n",
+        "\n",
+        "if is_even:\n",
+        "    print(\"All numbers are even\")\n",
+        "else:\n",
+        "    print(\"all numbers are not even\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NmDKaFK37FYM",
+        "outputId": "ab9471c2-ebd8-4625-a301-e7e4299b552d"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "all numbers are not even\n"
           ]
         }
       ]
