--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGYvx71JqA7PXrW6W1jGlO",
+      "authorship_tag": "ABX9TyNYJZ1QPCVtgscF5jz/exEt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1558,7 +1558,7 @@
         "id": "NmDKaFK37FYM",
         "outputId": "ab9471c2-ebd8-4625-a301-e7e4299b552d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1568,6 +1568,198 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "29. Write a program that reads a word and checks if it is a\n",
+        "palindrome (if it can be read backwards the same way)."
+      ],
+      "metadata": {
+        "id": "ZGASz_YrH4l5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "words = input(\"Please enter the word\")\n",
+        "def check_palindrome(words):\n",
+        "  words=words.lower()\n",
+        "  if words==words[::-1]:\n",
+        "    return \"Its a Palindrome\"\n",
+        "  else:\n",
+        "    return \"Its not a Palindrome\"\n",
+        "final= check_palindrome(words)\n",
+        "print(final)"
+      ],
+      "metadata": {
+        "id": "M4xtoEfEILrg",
+        "outputId": "aefaba83-b39a-409a-e51b-e85a845687be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter the wordANknA\n",
+            "Its a Palindrome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "30. Create a program that reads two words and checks if the\n",
+        "second word is an anagram of the first."
+      ],
+      "metadata": {
+        "id": "7JqnyOjLKCVu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "words1=input(\"Enter the first word \\n\")\n",
+        "words2=input(\"Enter the Second word \\n\")\n",
+        "def check_anagram(words1,words2):\n",
+        "  words1=words1.lower()\n",
+        "  words2=words2.lower()\n",
+        "  if len(words1)!=len(words2):\n",
+        "    return (\"Its not a Anagram\")\n",
+        "  else:\n",
+        "    if sorted(words1)==sorted(words2):\n",
+        "      return (\"Its an Anagram\")\n",
+        "    else:\n",
+        "      return (\"Its not a Anagram\")\n",
+        "final=check_anagram(words1,words2)\n",
+        "print(final)"
+      ],
+      "metadata": {
+        "id": "XHwTAd6JKD9I",
+        "outputId": "d2a1b063-8151-49b9-ffbc-c5046ae0fd7c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the first word \n",
+            "ankit\n",
+            "Enter the Second word \n",
+            "chuahan\n",
+            "Its not a Anagram\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "31. Write a program that takes a full name and displays only\n",
+        "the first name"
+      ],
+      "metadata": {
+        "id": "6ahb76IgL-jA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = input(\"Please enter your full name \\n\")\n",
+        "final=name.split(\" \")\n",
+        "first_name = final[0]\n",
+        "last_name = final[1]\n",
+        "print(f\"First name of the word {name}is {first_name}\")\n",
+        "print(f\"Last name of the word {name} is {last_name}\")"
+      ],
+      "metadata": {
+        "id": "jFTEPRYhMOLk",
+        "outputId": "3477439e-12af-4be5-dee8-2d298978ae6f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter your full name \n",
+            "Ankit Chauhan\n",
+            "First name of the word Ankit Chauhanis Ankit\n",
+            "Last name of the word Ankit Chauhan is Chauhan\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "32. Create a program that reads a word and displays the\n",
+        "number of vowels present in it"
+      ],
+      "metadata": {
+        "id": "wYdT7RYRMxL4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "words= input(\"please enter the word \\n\")\n",
+        "count_vowels=0\n",
+        "for word in words.lower():\n",
+        "  if word in 'a,e,i,o,u':\n",
+        "    count_vowels+=1\n",
+        "print(f\"Total number of vowels present in {words.lower()} is {count_vowels}\")\n"
+      ],
+      "metadata": {
+        "id": "Qm4s3T3XMyc6",
+        "outputId": "ed2ed5bf-3b9c-4ab1-8a79-7910fbc5c0a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "please enter the word \n",
+            "Ankit chauhan\n",
+            "Total number of vowels present in ankit chauhan is 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "33. Write a program that fills a 3x3 matrix with values entered\n",
+        "by the user and displays the sum of the main diagonal values."
+      ],
+      "metadata": {
+        "id": "a2dSoOJYPNR0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "m_OSxYgiPOzZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
