--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMPG4AQ4AqKDf48JaJsHPGa",
+      "authorship_tag": "ABX9TyMWDOy8vxmUeJbKFo357UDJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -925,6 +925,23 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "num = int(input())\n",
+        "sum_of_cubes = sum(map(lambda x: int(x)**3, str(num)))\n",
+        "\n",
+        "if sum_of_cubes == num:\n",
+        "    print('It is an Armstrong Number')\n",
+        "else:\n",
+        "    print(\"It is not an Armstrong number\")"
+      ],
+      "metadata": {
+        "id": "h9DEAK8F4SpW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "18. Write a Python Program to Find Armstrong Number in an Interval."
@@ -1599,7 +1616,7 @@
         "id": "M4xtoEfEILrg",
         "outputId": "aefaba83-b39a-409a-e51b-e85a845687be"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1646,7 +1663,7 @@
         "id": "XHwTAd6JKD9I",
         "outputId": "d2a1b063-8151-49b9-ffbc-c5046ae0fd7c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1688,7 +1705,7 @@
         "id": "jFTEPRYhMOLk",
         "outputId": "3477439e-12af-4be5-dee8-2d298978ae6f"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1729,7 +1746,7 @@
         "id": "Qm4s3T3XMyc6",
         "outputId": "ed2ed5bf-3b9c-4ab1-8a79-7910fbc5c0a8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1751,6 +1768,115 @@
       "metadata": {
         "id": "a2dSoOJYPNR0"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "34. find the missing number in an array\n"
+      ],
+      "metadata": {
+        "id": "zgJqJcOu4p8V"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=[1,2,4,5,6,7]\n",
+        "def get_missing_number():\n",
+        "  n=a[-1]\n",
+        "  sum_ = 0\n",
+        "  total = n*(n+1)//2\n",
+        "  sum_=sum(a)\n",
+        "  final=total-sum_\n",
+        "  return final\n",
+        "print(get_missing_number())\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "15ggCAcj4uGU",
+        "outputId": "3025033f-a32f-4969-a3c5-9fdc5911df25",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "35. Check the Largest and Smallest number from an Array"
+      ],
+      "metadata": {
+        "id": "dYgbv0si5ogC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "array = [3, 8, 1, 6, 2, 10, 4, 7, 5, 9]\n",
+        "\n",
+        "def largest_small(arr):\n",
+        "\n",
+        "    large_ = arr[0]\n",
+        "    small_ = arr[0]\n",
+        "\n",
+        "\n",
+        "    for num in arr:\n",
+        "        if num > large_:\n",
+        "            large_ = num\n",
+        "        elif num < small_:\n",
+        "            small_ = num\n",
+        "\n",
+        "    return large_, small_\n",
+        "\n",
+        "\n",
+        "largest, smallest = largest_small(array)\n"
+      ],
+      "metadata": {
+        "id": "wRgw6DDM5trc"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "array = [3, 8, 1, 6, 2, 10, 4, 7, 5, 9]\n",
+        "final=np.sort(array)\n",
+        "smallest_ = final[0]\n",
+        "biggest = final[-1]\n",
+        "print(smallest_)\n",
+        "print(biggest)"
+      ],
+      "metadata": {
+        "id": "dUWxhy396PyY",
+        "outputId": "8cd9a58d-880e-4da0-a06b-7615865e6bb1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "10\n"
+          ]
+        }
+      ]
     }
   ]
 }
