--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMWDOy8vxmUeJbKFo357UDJ",
+      "authorship_tag": "ABX9TyOXKUuUkyB/EzLKTTchIAFO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1799,7 +1799,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1845,7 +1845,7 @@
       "metadata": {
         "id": "wRgw6DDM5trc"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1866,7 +1866,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1874,6 +1874,114 @@
           "text": [
             "1\n",
             "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "36. Write a Python program to calculate the sum and average of n integer numbers (input from the user). Input 0 to finish."
+      ],
+      "metadata": {
+        "id": "SuZ3MMsWCYak"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#write your code inside main function\n",
+        "count = 0\n",
+        "sum = 0.0\n",
+        "number = 1\n",
+        "\n",
+        "while number != 0:\n",
+        "        number = int(input(\"\"))\n",
+        "        sum = sum + number\n",
+        "        count += 1\n",
+        "\n",
+        "if count == 0:\n",
+        "        print(\"Input some numbers\")\n",
+        "else:\n",
+        "        print(\"Average and Sum of the above numbers are:\", sum / (count-1), sum)"
+      ],
+      "metadata": {
+        "id": "UWduMC_tCbtR",
+        "outputId": "272c89be-cdcf-4904-b3af-c944217e9752",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12\n",
+            "3\n",
+            "45\n",
+            "12\n",
+            "0\n",
+            "Average and Sum of the above numbers are: 18.0 72.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "38. Write a Python program to compute the cumulative sum of numbers in a given list. Note: Cumulative sum = sum of itself + all previous numbers in the said list.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "_ErTZFaTFzn7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def nums_cumulative_sum(nums_list):\n",
+        "  return [sum(nums_list[:i+1]) for i in range(len(nums_list))]\n",
+        "\n",
+        "lst = eval(input())\n",
+        "print(nums_cumulative_sum(lst))\n"
+      ],
+      "metadata": {
+        "id": "r_VH41zdF20b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def cumulative_sum(nums):\n",
+        "    cumulative = []\n",
+        "    total = 0\n",
+        "    for num in nums:\n",
+        "        total += num\n",
+        "        cumulative.append(total)\n",
+        "    return cumulative\n",
+        "\n",
+        "# Test the function with the given list\n",
+        "nums = [10, 20, 30, 40, 50, 60, 7]\n",
+        "print(cumulative_sum(nums))"
+      ],
+      "metadata": {
+        "id": "MHMm_MDHF7sR",
+        "outputId": "ff396099-ae37-43a0-bc6f-c0d1326284b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 30, 60, 100, 150, 210, 217]\n"
           ]
         }
       ]
