--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXKUuUkyB/EzLKTTchIAFO",
+      "authorship_tag": "ABX9TyPsudEQCfANGl5njSLUy3L2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1912,7 +1912,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1975,13 +1975,116 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[10, 30, 60, 100, 150, 210, 217]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def maximum_product(nums):\n",
+        "    nums.sort()  # Step 1: Sort the input list of integers\n",
+        "\n",
+        "    # Step 2: Calculate the two possible cases for the maximum product\n",
+        "    case1 = nums[-1] * nums[-2] * nums[-3]  # Product of the three largest positive numbers\n",
+        "\n",
+        "    # Product of the two smallest negative numbers and the largest positive number\n",
+        "    case2 = nums[0] * nums[1] * nums[-1] if nums[0] * nums[1] > nums[-2] * nums[-3] else nums[-1] * nums[-2] * nums[-3]\n",
+        "\n",
+        "    # Step 3: Return the maximum of the two cases\n",
+        "    return max(case1, case2)\n",
+        "\n",
+        "# Test the function\n",
+        "nums = [1, 2, 3, 4]\n",
+        "print(maximum_product(nums))\n"
+      ],
+      "metadata": {
+        "id": "0qz7InRKm9Cy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[1,2,3,4,5,6,7,8,9]--->>>[2,4,6,8,1,3,5,7,9]\n"
+      ],
+      "metadata": {
+        "id": "kMiCw5x0sCUM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lst=[1,2,3,4,5,6,7,8,9]\n",
+        "even=[]\n",
+        "odd=[]\n",
+        "def new_lst(x):\n",
+        "  for num in x:\n",
+        "    if num%2==0:\n",
+        "      even.append(num)\n",
+        "    else:\n",
+        "      odd.append(num)\n",
+        "  return even+odd\n",
+        "print(new_lst(lst))"
+      ],
+      "metadata": {
+        "id": "8pgyOSCCsMH7",
+        "outputId": "eebd8576-4d3e-4cc8-d443-88edc305c5fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 1, 3, 5, 7, 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "lst = [13,45,87,76]\n",
+        "lst = np.sort(lst)\n",
+        "\n",
+        "if len(lst) % 2 == 0:  # If the list length is even\n",
+        "    mid1 = len(lst) // 2\n",
+        "    mid2 = mid1 - 1\n",
+        "    median = (lst[mid1] + lst[mid2]) / 2\n",
+        "else:  # If the list length is odd\n",
+        "    mid = len(lst) // 2\n",
+        "    median = lst[mid]\n",
+        "\n",
+        "print(median)\n"
+      ],
+      "metadata": {
+        "id": "D5UZrAayzmqG",
+        "outputId": "03045e7f-2153-4254-f128-920aa89a9680",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "60.5\n"
           ]
         }
       ]
