--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsudEQCfANGl5njSLUy3L2",
+      "authorship_tag": "ABX9TyPwoDf2A20VNXcKw73562lK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2042,7 +2042,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2078,13 +2078,76 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "60.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "40. Concating 2 string"
+      ],
+      "metadata": {
+        "id": "0H02dF0-FoKR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "first='Ankit'\n",
+        "last='Chauhan'\n",
+        "final = ' '.join([first,last])\n",
+        "new= first +' ' + last\n",
+        "print(final)\n",
+        "print(new)"
+      ],
+      "metadata": {
+        "id": "g7PJiUbiFt15",
+        "outputId": "9099ad60-bf21-4452-d3ad-fbb82b7a0214",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ankit Chauhan\n",
+            "Ankit Chauhan\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "names = ['Ankit ','Amit','Pawan','Ajay','Raman']\n",
+        "final='-'.join(names)\n",
+        "print(final)"
+      ],
+      "metadata": {
+        "id": "cXYafAU2G1E1",
+        "outputId": "8a41c7b7-9c81-40fb-ce48-c69bb9c53505",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ankit -Amit-Pawan-Ajay-Raman\n"
           ]
         }
       ]
