--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwoDf2A20VNXcKw73562lK",
+      "authorship_tag": "ABX9TyP/UWwVkUB0goCnwWAZj1Ly",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2115,7 +2115,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2141,13 +2141,129 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Ankit -Amit-Pawan-Ajay-Raman\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import string\n",
+        "\n",
+        "def is_pangram(sentence):\n",
+        "    alphabet = set(string.ascii_lowercase)\n",
+        "    sentence = sentence.lower()\n",
+        "    # Remove non-alphabetic characters\n",
+        "    sentence = ''.join(char for char in sentence if char.isalpha())\n",
+        "    # Check if all letters in alphabet are present in the sentence\n",
+        "    return set(sentence) >= alphabet\n",
+        "\n",
+        "# Example usage:\n",
+        "sentence = \"The quick brown fox jumps over the lazy dog\"\n",
+        "if is_pangram(sentence):\n",
+        "    print(\"The sentence is a pangram.\")\n",
+        "else:\n",
+        "    print(\"The sentence is not a pangram.\")\n"
+      ],
+      "metadata": {
+        "id": "x5BlD9Ect44U",
+        "outputId": "0b6b1245-699d-4793-994b-d0e40ffd3102",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The sentence is a pangram.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sentance='hey ankit how are you and how are you doing'\n",
+        "\n",
+        "new = sentance.split(' ')\n",
+        "print(new)\n",
+        "print(len(new))\n"
+      ],
+      "metadata": {
+        "id": "qeRdgDtcu5WV",
+        "outputId": "25f8bbeb-2100-4835-8f71-a5032633f67f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['hey', 'ankit', 'how', 'are', 'you', 'and', 'how', 'are', 'you', 'doing']\n",
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lst = ['hey', 'ankit', 'how', 'are', 'you', 'and', 'how', 'are', 'you', 'doing','comeher']\n",
+        "n=[]\n",
+        "for name in lst:\n",
+        "  if len(name)>=5:\n",
+        "    n.append(name)\n",
+        "print(n)"
+      ],
+      "metadata": {
+        "id": "-7UOTr6_KiaV",
+        "outputId": "feb9e5bd-907c-4567-c2ef-4f5cf5f84824",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['ankit', 'doing', 'comeher']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "kATocWWyM8uI",
+        "outputId": "21096f5a-e431-41c9-ea84-e525beccdfb5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "75\n",
+            "o\n"
           ]
         }
       ]
