--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/UWwVkUB0goCnwWAZj1Ly",
+      "authorship_tag": "ABX9TyPXcLNPsbf6t02G5VGVEkkk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1987,33 +1987,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "def maximum_product(nums):\n",
-        "    nums.sort()  # Step 1: Sort the input list of integers\n",
-        "\n",
-        "    # Step 2: Calculate the two possible cases for the maximum product\n",
-        "    case1 = nums[-1] * nums[-2] * nums[-3]  # Product of the three largest positive numbers\n",
-        "\n",
-        "    # Product of the two smallest negative numbers and the largest positive number\n",
-        "    case2 = nums[0] * nums[1] * nums[-1] if nums[0] * nums[1] > nums[-2] * nums[-3] else nums[-1] * nums[-2] * nums[-3]\n",
-        "\n",
-        "    # Step 3: Return the maximum of the two cases\n",
-        "    return max(case1, case2)\n",
-        "\n",
-        "# Test the function\n",
-        "nums = [1, 2, 3, 4]\n",
-        "print(maximum_product(nums))\n"
-      ],
-      "metadata": {
-        "id": "0qz7InRKm9Cy"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
+        "39. Write a python program soo thats first all the even numbers appears and later odd\n",
+        "\n",
         "[1,2,3,4,5,6,7,8,9]--->>>[2,4,6,8,1,3,5,7,9]\n"
       ],
       "metadata": {
@@ -2101,35 +2078,6 @@
     {
       "cell_type": "code",
       "source": [
-        "first='Ankit'\n",
-        "last='Chauhan'\n",
-        "final = ' '.join([first,last])\n",
-        "new= first +' ' + last\n",
-        "print(final)\n",
-        "print(new)"
-      ],
-      "metadata": {
-        "id": "g7PJiUbiFt15",
-        "outputId": "9099ad60-bf21-4452-d3ad-fbb82b7a0214",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Ankit Chauhan\n",
-            "Ankit Chauhan\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "names = ['Ankit ','Amit','Pawan','Ajay','Raman']\n",
         "final='-'.join(names)\n",
         "print(final)"
@@ -2148,6 +2096,43 @@
           "name": "stdout",
           "text": [
             "Ankit -Amit-Pawan-Ajay-Raman\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "41. Write a Python program to find the longest length of word from sentance"
+      ],
+      "metadata": {
+        "id": "t9e_LaqbDK-C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sentance_='hey ankit how are you and how are you doings'\n",
+        "def max_len(sentance_):\n",
+        "  new =sentance_.split(' ')\n",
+        "  return max(new,key=len)\n",
+        "\n",
+        "print(max_len(sentance_))\n"
+      ],
+      "metadata": {
+        "id": "eCHm9IQkBXdX",
+        "outputId": "79a77485-f888-4913-f41b-424bb656f81e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "doings\n"
           ]
         }
       ]
@@ -2179,7 +2164,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2206,7 +2191,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2235,7 +2220,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2248,22 +2233,50 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def maximum_product(nums):\n",
+        "    nums.sort()  # Step 1: Sort the input list of integers\n",
+        "\n",
+        "    # Step 2: Calculate the two possible cases for the maximum product\n",
+        "    case1 = nums[-1] * nums[-2] * nums[-3]  # Product of the three largest positive numbers\n",
+        "\n",
+        "    # Product of the two smallest negative numbers and the largest positive number\n",
+        "    case2 = nums[0] * nums[1] * nums[-1] if nums[0] * nums[1] > nums[-2] * nums[-3] else nums[-1] * nums[-2] * nums[-3]\n",
+        "\n",
+        "    # Step 3: Return the maximum of the two cases\n",
+        "    return max(case1, case2)\n",
+        "\n",
+        "# Test the function\n",
+        "nums = [1, 2, 3, 4]\n",
+        "print(maximum_product(nums))\n"
+      ],
+      "metadata": {
+        "id": "0qz7InRKm9Cy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lst=[1,2,3,4,5]\n",
+        "lst1=[3,4,5,6,7]\n",
+        "print(list(set(lst) & set(lst1)))"
+      ],
       "metadata": {
         "id": "kATocWWyM8uI",
-        "outputId": "21096f5a-e431-41c9-ea84-e525beccdfb5",
+        "outputId": "d8ab22ea-c00a-4720-b6ac-13ab725062ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 57,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "75\n",
-            "o\n"
+            "[3, 4, 5]\n"
           ]
         }
       ]
