--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXcLNPsbf6t02G5VGVEkkk",
+      "authorship_tag": "ABX9TyOhh4D5D/fNcws5QFfUfxg3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2126,7 +2126,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2270,13 +2270,258 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[3, 4, 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Create a function that takes a list of non-negative integers and strings and return a\n",
+        "new list without the strings"
+      ],
+      "metadata": {
+        "id": "D67HZxd8kOzH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lst = ['ankit',12,45,'Jhon','Ravi',90,-46]\n",
+        "new=[]\n",
+        "for i in  lst :\n",
+        "  if isinstance(i,int) and i>=0:\n",
+        "    new.append(i)\n",
+        "print(new)"
+      ],
+      "metadata": {
+        "id": "gLFbOX_0jzer",
+        "outputId": "18f5c09e-80f6-400b-fd25-a569599d73f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[12, 45, 90]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The \"Reverser\" takes a string as input and returns that string in reverse order, with\n",
+        "the opposite case"
+      ],
+      "metadata": {
+        "id": "aKwEPJRrktW5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = input()\n",
+        "def new_name(name):\n",
+        "  return name[::-1].swapcase()\n",
+        "print(new_name(name))"
+      ],
+      "metadata": {
+        "id": "yllw9ZPXkuW2",
+        "outputId": "51d7fda6-933a-4ff3-c7d3-6d8b88e4692b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HeLlO aNkIt\n",
+            "TiKnA oLlEh\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Create a function that takes a single string as argument and returns an ordered list\n",
+        "containing the indices of all capital letters in the string"
+      ],
+      "metadata": {
+        "id": "nwbCo3R7n1f3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "def nea_ind(word):\n",
+        "  return [i for i,char in enumerate(word) if char.isupper()]\n",
+        "print(nea_ind('HeLlO woRLd'))"
+      ],
+      "metadata": {
+        "id": "HlzuaU0hn2TT",
+        "outputId": "49ea647b-0b4d-4891-e688-e1727327d206",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 2, 4, 8, 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new =[ i for i in range(1,15) if i%2==0]\n",
+        "print(new)"
+      ],
+      "metadata": {
+        "id": "aQGtmILIpSPV",
+        "outputId": "9a33914b-7a96-47f8-d6b1-96eaf0b17f3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 10, 12, 14]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Create a function that takes a string and returns a string with its letters in\n",
+        "alphabetical order"
+      ],
+      "metadata": {
+        "id": "Ewsbf-42vjMr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word = 'Ankit'\n",
+        "\n",
+        "def sorted_word(word):\n",
+        "    return ''.join(sorted(word))\n",
+        "\n",
+        "print(sorted_word(word))\n"
+      ],
+      "metadata": {
+        "id": "BLOV-Aw6vk9h",
+        "outputId": "5b49c990-150a-472d-f48e-3ed3119d5b01",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aiknt\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "An isogram is a word that has no duplicate letters. Create a function that takes a\n",
+        "string and returns either True or False depending on whether or not it's an \"isogram\"."
+      ],
+      "metadata": {
+        "id": "OSOROYgIxNkY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def is_isogram(word):\n",
+        "\n",
+        " word = word.lower()\n",
+        "\n",
+        " # Create a set to store unique letters in the word\n",
+        " unique_letters = set()\n",
+        "\n",
+        " for letter in word:\n",
+        " # If the letter is already in the set, it's not an isogram\n",
+        " if letter in unique_letters:\n",
+        " return False\n",
+        " # Otherwise, add it to the set\n",
+        " unique_letters.add(letter)\n",
+        "\n",
+        " return True"
+      ],
+      "metadata": {
+        "id": "WJqdI8XsxOkP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Create a function that takes a list of strings and return a list, sorted from shortest to\n",
+        "longest."
+      ],
+      "metadata": {
+        "id": "FG4C8vD6x88X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lst = ['google','Ant','Z','Amazone','Apples','Grapes_']\n",
+        "def sortby_len(word):\n",
+        "    return (sorted(lst,key=len))\n",
+        "\n",
+        "print(sortby_len(word))"
+      ],
+      "metadata": {
+        "id": "ocNuPTwJxb-F",
+        "outputId": "f0a152a7-d78f-440b-ab20-30c442732c46",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Z', 'Ant', 'google', 'Apples', 'Amazone', 'Grapes_']\n"
           ]
         }
       ]
