--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhh4D5D/fNcws5QFfUfxg3",
+      "authorship_tag": "ABX9TyPwCnMw940GHyT7k52/qUbw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1082,6 +1082,8 @@
     {
       "cell_type": "code",
       "source": [
+        "arr = [1, 2, 3, 4, 5]\n",
+        "d = 2\n",
         "def rotate_array(arr, d):\n",
         "    n = len(arr)\n",
         "\n",
@@ -1091,27 +1093,26 @@
         "\n",
         "    return arr[-d:] + arr[:-d]\n",
         "\n",
-        "arr = [1, 2, 3, 4, 5]\n",
-        "d = 1\n",
+        "\n",
         "rotated_arr = rotate_array(arr, d)\n",
         "print(\"Original array:\", arr)\n",
         "print(\"Rotated array:\", rotated_arr)"
       ],
       "metadata": {
         "id": "ylbfpcy_JnEA",
-        "outputId": "f3f1a58f-bb3d-45ca-c517-d26bcaf12f26",
+        "outputId": "824b4827-8129-448c-a850-135830a2df7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Original array: [1, 2, 3, 4, 5]\n",
-            "Rotated array: [5, 1, 2, 3, 4]\n"
+            "Rotated array: [4, 5, 1, 2, 3]\n"
           ]
         }
       ]
@@ -1229,20 +1230,20 @@
       ],
       "metadata": {
         "id": "RCMwL0o-qkoV",
-        "outputId": "10c38696-1574-48be-ea6a-66dda5009b04",
+        "outputId": "90489873-65ce-4dd3-a450-707fe8e28b45",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "please enter the number \n",
-            "17\n",
-            "Its a Prime\n"
+            "12\n",
+            "Its not a prime\n"
           ]
         }
       ]
@@ -2308,7 +2309,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2344,7 +2345,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2381,7 +2382,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2405,7 +2406,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2443,7 +2444,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2515,7 +2516,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2525,6 +2526,36 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pattern"
+      ],
+      "metadata": {
+        "id": "LtYGxczDii2J"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n= int(input(\"enter the number--->\"))\n",
+        "\n",
+        "for i in range(1,n+1):\n",
+        "        for j in range(1,i+1):\n",
+        "                print(j,end=' ')\n",
+        "        print('')\n",
+        "\n",
+        "for i in range(n,0,-1):\n",
+        "        for j in range(i,0,-1):\n",
+        "                print(j,end=' ')\n",
+        "        print('')"
+      ],
+      "metadata": {
+        "id": "sSU6hc6MikYT"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
