--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwCnMw940GHyT7k52/qUbw",
+      "authorship_tag": "ABX9TyM5kT+EJhRKZ3IqVRbGlhvk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1105,7 +1105,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1235,7 +1235,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2556,6 +2556,48 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def two_sum(nums, target):\n",
+        "    # Dictionary to store the complement of each number\n",
+        "    complement_map = {}\n",
+        "\n",
+        "    for i, num in enumerate(nums):\n",
+        "        complement = target - num\n",
+        "        # Check if the complement exists in the dictionary\n",
+        "        if complement in complement_map:\n",
+        "            # Return the indices of the two numbers\n",
+        "            return [complement_map[complement], i]\n",
+        "        # If complement not found, add the current number to the dictionary\n",
+        "        complement_map[num] = i\n",
+        "\n",
+        "    # If no solution found\n",
+        "    return None\n",
+        "\n",
+        "# Test the function with nums = [2,7,11,15], target = 9\n",
+        "nums = [2, 7, 11,75, 15,86,96]\n",
+        "target = 86\n",
+        "print(two_sum(nums, target))  # Output: [0, 1]\n"
+      ],
+      "metadata": {
+        "id": "XU16SbKSTT9r",
+        "outputId": "bdbddec0-3016-46f8-eadf-abe3c2a5b23f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 3]\n"
+          ]
+        }
+      ]
     }
   ]
 }
